merge: from leomheng